Ensure slides work when there's overflow
If there's vertical overflow browsers don't scroll to ID in URL hash

--- a/src/_includes/assets/css/slides.css
+++ b/src/_includes/assets/css/slides.css
@@ -21,7 +21,7 @@ html {
   width: 100vw;
   height: 100vh;
   display: flex;
-  overflow-x: hidden;
+  overflow: hidden;
   scroll-behavior: smooth;
   scroll-snap-type: x mandatory;
 }
